--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
